# ai-diagnose-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
doc/: diagnose-plugin-development-guide.md
plugins/diagnose-plugin/: .mcp.json
plugins/diagnose-plugin/.codex-plugin/: plugin.json
plugins/diagnose-plugin/scripts/: diagnose-mcp  diagnose-mcp.cmd
plugins/diagnose-plugin/skills/diagnose/: SKILL.md
plugins/diagnose-plugin/skills/diagnose/agents/: openai.yaml
scripts/: install-linux.sh
src/diagnose/: __init__.py  config.py
src/diagnose/approval/: __init__.py  service.py
src/diagnose/audit/: __init__.py  log.py  models.py
src/diagnose/domain/: __init__.py  base.py  errors.py  hashing.py  models.py  states.py
src/diagnose/executors/: __init__.py  base.py  fake.py
src/diagnose/ipc/: __init__.py  descriptor.py  errors.py  framing.py  loopback_tcp.py  protocol.py  transport.py  unix_socket.py
src/diagnose/mcp/: __init__.py  gateway.py  schemas.py  server.py
src/diagnose/persistence/: __init__.py  database.py  records.py
src/diagnose/persistence/migrations/: 001_initial.sql  002_hardening.sql  003_persistence_metadata.sql  __init__.py
src/diagnose/policy/: __init__.py  engine.py  models.py
src/diagnose/sanitization/: __init__.py  models.py  sanitizer.py
src/diagnose/terminal/: __init__.py  action_queue.py  approval_ui.py  runtime.py  server.py  service.py
tests/e2e/: test_mcp_stdio_e2e.py  test_runtime_ipc_e2e.py
tests/integration/: test_action_lifecycle_hardening.py  test_action_service.py  test_approval_races_final.py
tests/unit/: test_action_queue.py  test_approval_ui_safety.py  test_audit_chain.py  test_audit_hardening.py  test_config_loading.py  test_domain_models.py  test_domain_states.py  test_executor_fake.py  test_ipc_framing.py  test_ipc_protocol.py  test_ipc_slowloris.py  test_ipc_tcp.py  test_ipc_unix.py  test_mcp_server.py  test_persistence_database.py  test_persistence_hardening.py  test_plugin_bundle.py  test_policy_engine.py  test_sanitization_adversarial.py  test_sanitization_output.py  test_terminal_cli.py  test_terminal_service_security.py
